--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@supabase/supabase-js": "^2.55.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-table": "^8.21.3",
+    "@turf/turf": "^7.2.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -43,6 +44,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11",
+    "turf": "^3.0.14",
     "zod": "^4.0.17"
   },
   "devDependencies": {
