--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
     "sonner": "^2.0.7",
+    "supercluster": "^8.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11",
